seting node engine for heroku deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "expensify-app",
   "version": "1.0.0",
+  "engines":{
+    "node": "10.x"
+  },
   "main": "index.js",
   "author": "Sebastian Carneiro",
   "license": "MIT",
